@@ -9,6 +9,7 @@ define( function( require ) {
   'use strict';
 
   // modules
+  var inherit = require( 'PHET_CORE/inherit' );
   var Atom = require( 'NITROGLYCERIN/Atom' );
   var Element = require( 'NITROGLYCERIN/Element' );
   var CH4Node = require( 'NITROGLYCERIN/nodes/CH4Node' );
@@ -63,15 +64,17 @@ define( function( require ) {
     } );
   };
 
-  /**
-   * Any molecule with more than 5 atoms is considered "big".
-   * This affects degree of difficulty in the Game.
-   *
-   * @return {Boolean}
-   */
-  Molecule.prototype.isBig = function() {
-    return this.atoms.length > 5;
-  };
+  inherit( Object, Molecule, {
+
+    /**
+     * Any molecule with more than 5 atoms is considered "big".
+     * This affects degree of difficulty in the Game.
+     * @return {Boolean}
+     */
+    isBig: function() {
+      return this.atoms.length > 5;
+    }
+  } );
 
   return {
 
